--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-allauth==0.54.0
 django-bootstrap-datepicker-plus==5.0.4
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.0
+django-filter==23.3
 djangorestframework==3.14.0
 gunicorn==21.2.0
 idna==3.4
