--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,16 @@ crispy-bootstrap5==0.7
 cryptography==41.0.2
 defusedxml==0.7.1
 dj-database-url==0.5.0
+dj-rest-auth==2.1.9
 dj3-cloudinary-storage==0.0.6
 Django==3.2.20
-django-allauth==0.54.0
+django-allauth==0.44.0
 django-bootstrap-datepicker-plus==5.0.4
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.0
 django-filter==23.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 gunicorn==21.2.0
 idna==3.4
 oauthlib==3.2.2
